--- a/BeeniHackathon/src/assets/main.css
+++ b/BeeniHackathon/src/assets/main.css
@@ -1,5 +1,43 @@
 @import './base.css';
 
+form {
+  max-width: 420px;
+  margin: 30px auto;
+  background: white;
+  text-align: left;
+  padding: 30px;
+  border-radius: 10px;
+}
+
+label {
+  color: #414141;
+  display: inline-block;
+  margin: 25px 0 15px;
+  font-size: 0.6em;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+}
+
+input, select {
+  display: block;
+  padding: 10px 6px;
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  color: #555;
+}
+
+#cform {
+  max-width: 300px;
+  margin: 10px auto;
+  background: rgb(146, 185, 130);
+  text-align: left;
+  padding: 30px;
+  border-radius: 10px;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
