--- a/BeeniHackathon/src/assets/main.css
+++ b/BeeniHackathon/src/assets/main.css
@@ -1,8 +1,11 @@
 @import './base.css';
 
 form {
-  max-width: 420px;
-  margin: 30px auto;
+  width: 186%;
+  display: block;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 20px auto; 
   background: white;
   text-align: left;
   padding: 30px;
@@ -19,7 +22,7 @@ label {
   font-weight: bold;
 }
 
-input, select {
+input, select, textarea {
   display: block;
   padding: 10px 6px;
   width: 100%;
@@ -29,8 +32,34 @@ input, select {
   color: #555;
 }
 
+input[type="radio"] {
+  display: inline-block;
+  width: 16px;
+  margin: 0 10px 0 0;
+  position: relative;
+  top: 2px;
+}
+
+button {
+  background: #588548;
+  border: 0;
+  padding: 10px 20px;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  border-radius: 20px;
+}
+
+.error {
+  color: #ff0062;
+  margin-top: 10px;
+  font-size: 0.8em;
+  font-weight: bold;
+}
+
 #cform {
-  max-width: 300px;
+  max-width: 600px;
   margin: 10px auto;
   background: rgb(146, 185, 130);
   text-align: left;
