--- a/BeeniHackathon/src/assets/main.css
+++ b/BeeniHackathon/src/assets/main.css
@@ -3,8 +3,6 @@
 form {
   width: 186%;
   display: block;
-  /* margin-left: auto;
-  margin-right: auto; */
   margin: 20px auto; 
   background: white;
   text-align: left;
@@ -51,13 +49,6 @@ button {
   border-radius: 20px;
 }
 
-.error {
-  color: #ff0062;
-  margin-top: 10px;
-  font-size: 0.8em;
-  font-weight: bold;
-}
-
 #cform {
   max-width: 600px;
   margin: 10px auto;
@@ -99,4 +90,11 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+}
+
+/* Hide the spinner buttons in Chrome, Safari, Edge, and Opera */
+.no-spinner::-webkit-outer-spin-button,
+.no-spinner::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
